log
Thu May  5 15:20:04 UTC 2022: 
 heap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
24172e5
Thu May  5 15:24:05 UTC 2022: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
aa54b28
Thu May  5 15:26:42 UTC 2022: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
dd92295
Thu May  5 15:29:19 UTC 2022: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
7edd822
Thu May  5 15:30:06 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
c0526fe
Thu May  5 15:51:17 UTC 2022: 
 heap.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b3ebd53
Thu May  5 15:56:06 UTC 2022: 
 heap.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  2|2
total_score: 20/70
474003b
Thu May  5 15:56:45 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6f02425
Thu May  5 16:02:03 UTC 2022: 
 heap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  4|2
total_score: 30/70
143d8f2
Thu May  5 16:03:07 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
0569d7d
